<resources>
    <string name="app_name" translatable="false">AOSP Mods</string>
    <string name="app_themed_icon_title">Enable alternative AOSP Mods themed app icon</string>
    <string name="xposed_desc">Custom features for Android 12+ AOSP based ROMs</string>
    <string name="title_activity_settings" translatable="false">@string/app_name</string>
    <string name="error_not_activated">Please confirm if the module is activated within LSPosed Manager</string>
    <string name="hide_default">Hide (Default)</string>
    <string name="percent_of_default_size">% of default size</string>
    <string name="overlay_none_title">(Default)</string>
    <string name="general_section">General options</string>
    <string name="general_on">On</string>
    <string name="general_off">Off</string>
    <string name="sysui_restart_needed">Requires a SystemUI restart to apply</string>
    <string name="restart_needed">Requires a reboot to apply</string>
    <string name="more_area">more area</string>
    <string name="less_area">less area</string>
    <string name="lockscreen_header_title">Lock Screen</string>
    <string name="statusbar_header">Status Bar</string>
    <string name="nav_header">Navigation bar</string>
    <string name="misc_header">Miscellaneous</string>
    <string name="qs_panel_category_title">Quick Settings Panel</string>
    <string name="theme_customization_category">Theming</string>
    <string name="pm_header">Package Manager</string>
    <string name="hotspot_header">Portable Hotspot</string>
    <string name="hotspot_hide_ssid_title">Hide SSID</string>
    <string name="hotspot_inactivity_timeout_title">Inactivity timeout</string>
    <string name="hotspot_max_client_title">Maximum clients</string>
    <string name="ls_general_options">Lock screen options</string>
    <string name="hide_avatar_title">Remove user avatar (multi user mode)</string>
    <string name="transparent_fingerprint_circle">Remove background circle from under-display fingerprint</string>
    <string name="transparent_fingerprint_circle_off">Circle around fingerprint icon is active</string>
    <string name="transparent_fingerprint_circle_on">Circle around fingerprint icon will be hidden</string>
    <string name="carrier_text_category">Carrier text</string>
    <string name="custom_text_category">Custom text on Lockscreen</string>
    <string name="configure_carrier_text">Configure carrier text - Top of the screen</string>
    <string name="carrier_text_mod_disabled">Carrier text unchanged</string>
    <string name="carrier_text_mod_enabled">Custom carrier text</string>
    <string name="carrier_text_value">Custom carrier text</string>
    <string name="lockscreen_center_text_value">Clock area custom text</string>
    <string name="keyguard_dim_amount_title">Keyguard wallpaper dim</string>
    <string name="keyguard_bottom_category">Bottom area shortcuts</string>
    <string name="keyguard_bottom_buttons_transparent_title">Remove circle around icons</string>
    <string name="keyguard_bottom_force_camera_title">Show camera shortcut</string>
    <string name="keyguard_left_shortcut">Show left shortcut on lock screen</string>
    <string name="LSleftShortcutTitle">Left shortcut</string>
    <string name="LSrightShortcutTitle">Right shortcut</string>
    <string name="LSleftLongClickShortcutTitle">Left shortcut (Long press)</string>
    <string name="LSrightLongClickShortcutTitle">Right shortcut (Long press)</string>
    <string name="camera_shortcut">Camera</string>
    <string name="assistant_shortcut">Assistant</string>
    <string name="torch_shortcut">Flashlight</string>
    <string name="tv_remote_shortcut">TV Remote</string>
    <string name="dnd_shortcut">Do Not Disturb</string>
    <string name="album_art_category">Media options</string>
    <string name="album_art_title">Enable album art when playing media</string>
    <string name="album_art_blur_text">Blur value</string>
    <string name="album_art_grayscale">Grayscale</string>
    <string name="shufflePin_title">Shuffle Pin</string>
    <string name="wakeup_to_security_title">Show security input on device wake</string>
    <string name="easy_unlock_title">Easy unlock (Pin/Password)</string>
    <string name="easy_unlock_summary">If it didn\'t work the first time, try again</string>
    <string name="charging_info_title">Charging information on lockscreen</string>
    <string name="imperial_units_title">Use imperial units</string>
    <string name="double_tap_sleep_title">Double-tap to sleep</string>
    <string name="battery_style_title">Choose a battery style</string>
    <string name="battery_show_percent_title">Show battery percentage</string>
    <string name="battery_style_category_title">Battery style</string>
    <string name="battery_style_category_summary" translatable="false">@string/qs_footer_text_desc</string>
    <string name="battery_icon_size_title">Battery icon size</string>
    <string name="battery_size_summary" translatable="false">@string/percent_of_default_size</string>
    <string name="battery_hidden">Hidden</string>
    <string name="BIcon_Opacity_title">Opacity</string>
    <string name="sb_center_fine_tune">Fine-tune center area</string>
    <string name="sb_multi_row_system_icons">Multi-row system icons (needs raised statusbar height)</string>
    <string name="sb_multi_row_notification_icons">Multi-row notification icons (needs raised statusbar height)</string>
    <string name="sb_double_row_category">Double Statusbar rows</string>
    <string name="sb_icon_sort_mode">Icon placement method</string>
    <string name="sort_clean">Sort in a grid</string>
    <string name="sort_tight">Fit maximum items</string>
    <string name="sb_notification_limit">Maximum number of notification icons (Leave blank for Default)</string>
    <string name="lte_4g_icon_title">LTE / 4G Icon</string>
    <string name="combined_signal_icon_title">Combined signal icons</string>
    <string name="hide_roaming_title">Hide mobile roaming indicators</string>
    <string name="caution_mobile_costs">CAUTION - Not knowing that you\'re roaming can increase your mobile costs</string>
    <string name="volte_icon_title">Show VoLTE icon when available</string>
    <string name="hide_privacychip_title">Hide privacy indicators\n(Camera, Mic)</string>
    <string name="sb_vibration_switch_title">Show Vibrate icon</string>
    <string name="sbc_position_title">Clock position</string>
    <string name="sbc_ampm_style">AM/PM Style</string>
    <string name="sbc_show_secs">Show seconds</string>
    <string name="sbc_date_cat">Date options</string>
    <string name="sbc_day_of_week_options">Show day of week with clock</string>
    <string name="sbc_advanced_cat">Advanced (will supersede above setting!)</string>
    <string name="sbc_advanced_sum">Please read Java date format documentation</string>
    <string name="sbc_custom_date_before">Custom text before clock</string>
    <string name="sbc_date_small">Smaller size (70%)</string>
    <string name="sbc_custom_date_after">Custom text after clock</string>
    <string name="sbc_header">Status bar clock customization</string>
    <string name="sbc_clock_color_category">Color options</string>
    <string name="sbc_colorful_title">Make it colorful</string>
    <string name="sbc_before_color">Text before clock</string>
    <string name="sbc_color">Clock</string>
    <string name="sbc_after_color">Text after clock</string>
    <string name="network_settings_pref">Network monitor settings...</string>
    <string name="ntsb_far_left">Far Left</string>
    <string name="ntsb_mid_left">Mid-Left</string>
    <string name="ntsb_mid_right">Mid-Right</string>
    <string name="ntsb_category_title">Network Monitor</string>
    <string name="ntsb_enabled_title">Enable network monitor</string>
    <string name="ntsb_position_title">Monitor Position</string>
    <string name="ntsb_threshold_title">Auto-hide threshold</string>
    <string name="ntsb_threshold_summary">Hide if traffic is less than… (Kilobytes)</string>
    <string name="network_mode_title">Monitor style</string>
    <string name="network_colorful_title">Make it colorful</string>
    <string name="network_download_top">Download speed on top</string>
    <string name="network_download_color_title">Download color</string>
    <string name="network_upload_color_title">Upload color</string>
    <string name="network_opacity_title">Opacity</string>
    <string name="network_interval_title">Refresh interval (seconds)</string>
    <string name="network_show_icons_title">Show traffic direction icons</string>
    <string name="nt_mode_rxtx">Download &amp; Upload</string>
    <string name="nt_mode_total">Download + Upload (Combined)</string>
    <string name="nt_mode_rxonly">Download only</string>
    <string name="nt_mode_txonly">Upload only</string>
    <string name="statusbar_general_options">Status Bar Options</string>
    <string name="dual_tone_battery_title">Enable dual tone battery meter</string>
    <string name="dual_tone_battery_on_summary">On (only works with portrait icon)</string>
    <string name="unread_messages_title">Show number of unread messages</string>
    <string name="status_bar_height">Status bar height (rotate screen to apply)</string>
    <string name="screenshot_sound_disable_title">Disable screenshot sound</string>
    <string name="clipboard_smart_actions_title">Smart actions on clipboard overlay</string>
    <string name="allow_all_screen_rotations">Force-unlock all screen rotations</string>
    <string name="allow_all_screen_rotations_summary">Will also ignore manual rotation floating button</string>
    <string name="force_no_cutout">Ignore the camera cutout</string>
    <string name="clear_all_reposition_title">Add an accessible clear-all button to recents page</string>
    <string name="volume_button_step_title">Volume steps (0 to 100%)</string>
    <string name="display_resolution_title">Display resolution</string>
    <string name="brightness_range_title">Display brightness limits</string>
    <string name="brightness_range_not_linear">This range is NOT linear: Sometimes a small difference leads to considerable changes</string>
    <string name="so_power_longpress_torch_title">Long press Power button for torch</string>
    <string name="so_fingerprint_sensor_enabled">Allow fingerprint sensor when the screen is off</string>
    <string name="so_double_tap_wake_title">Double-tap to wake phone</string>
    <string name="so_double_tap_wake_summary">Disables single-tap to wake</string>
    <string name="doze_header">While screen is off…</string>
    <string name="custom_themed_icons_title">Custom themed icons</string>
    <string name="custom_themed_icons_off">Custom icons disabled</string>
    <string name="custom_themed_icons_on">Custom icons enabled</string>
    <string name="so_vol_longpress_skip">Long press Volume buttons to skip music</string>
    <string name="notifications_header">Notifications options</string>
    <string name="expand_notifications_icons_title">Add expand/collapse all buttons</string>
    <string name="heads_up_notification_duration">Heads-up notification duration</string>
    <string name="disable_overscroll">Disable elastic overscroll effect</string>
    <string name="overscroll_on_summary">Important: you MUST enable the apps you want to disable overscroll for within LSPosed</string>
    <string name="call_category">Phone calls</string>
    <string name="vibrate_on_call_active_title">Vibrate on outgoing call answered</string>
    <string name="vibrate_on_call_drop_title">Vibrate when call disconnects</string>
    <string name="vibration_type_notification">Intensity defined by system notification vibration settings</string>
    <string name="monitoring_category_title">Monitoring options</string>
    <string name="netstat_header">Network statistics settings</string>
    <string name="screenshot_chord_insecure">VolDown+Power unrestricted screenshot</string>
</resources>